# parallel-programming

lab3/: CMakeLists.txt  main.c
stribog/: CMakeLists.txt  gost341118.cpp  gost341118.h  main.cpp
